--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
             </div>
             <div class="change-parent-dialog dialog-box" id="change-parent-dialog">
                 <p>Change parent of the selected items</p>
-                <input type="number" id="change-parent-dialog-parent" name="parent" />
+                <input type="text" id="change-parent-dialog-parent" name="parent" />
                 <div class="buttons">
                     <button class="button upload-button" id="change-parent-yes">Change</button>
                     <button class="button" id="change-parent-no">Cancel</button>
